apps/external-apps/minio/headers.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: minio-headers
  namespace: default
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
