apps/external-apps/minio/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: external-apps
spec:
  type: ExternalName
  ports:
    - name: api
      port: 9100
      targetPort: 9100
      protocol: TCP
    - name: console
      port: 9101
      targetPort: 9101
      protocol: TCP
  externalName: 10.69.1.40
