apps/external-apps/minio/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-local
spec:
  entryPoints:
    - websecure
  tls:
    secretName: local-cvsickle-com-tls
  routes:
    # api port
    - match: Host(`s3.local.cvsickle.com`)
      kind: Rule
      services:
        - name: minio
          namespace: external-apps
          port: 9100
    # ui port
    - match: Host(`minio.local.cvsickle.com`)
      kind: Rule
      services:
        - name: minio
          namespace: external-apps
          port: 9101
      middlewares:
        - name: minio-headers
